--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <!-- Sink Options (inside blue card) – Option B (quantity only, 0–20) -->
   <div id="sink-options">
-    <div class="section-title">Optional Sink Selections</div>
+    <div class="section-title">Sink Selections</div>
 
     <div class="sink-grid">
       <label class="sink-item" data-price="180" for="qty-kstd">
@@ -59,12 +59,12 @@
       </label>
 
       <label class="sink-item" data-price="40" for="qty-btop">
-        <span class="sink-name">Topmount Bathroom Sink</span>
+        <span class="sink-name">Topmount Bathroom Sink C/S</span>
         <input id="qty-btop" type="number" class="sink-qty" min="0" max="20" step="1" value="0" inputmode="numeric">
       </label>
 
       <label class="sink-item" data-price="30" for="qty-bves">
-        <span class="sink-name">Vessel Bathroom Sink</span>
+        <span class="sink-name">Vessel Bathroom Sink C/S</span>
         <input id="qty-bves" type="number" class="sink-qty" min="0" max="20" step="1" value="0" inputmode="numeric">
       </label>
     </div>
