--- a/index.html
+++ b/index.html
@@ -97,7 +97,21 @@
         <td id="totalExtras"></td>
         <td id="totalCost"></td>
       </tr>
-    </tfoot>
+      <tfoot>
+  <tr>
+    <td colspan="8" style="text-align:right;"><strong>Totals:</strong></td>
+    <td id="totalSqft"></td>
+    <td id="totalLabor"></td>
+    <td id="totalExtras"></td>
+    <td id="totalCost"></td>
+  </tr>
+
+  <!-- NEW: shows the sink add‑ons dollar amount -->
+  <tr>
+    <td colspan="11" style="text-align:right;"><strong>Sink Add‑ons:</strong></td>
+    <td id="totalSinkAddons"></td>
+  </tr>
+</tfoot>
   </table>
 
   <h2>Suggested Prefab Pieces (by Material/Type, leftovers reused)</h2>
