--- a/index.html
+++ b/index.html
@@ -28,44 +28,50 @@
     <button id="plyBtn" onclick="suggestPlywood()">Suggest Plywood Sheets</button>
   </section>
 
-  <!-- Sink Options (inside blue card) – Option B (quantity only, 0–20) -->
+  <!-- Sink Options (inside blue card) -->
   <div id="sink-options">
-    <div class="section-title">Sink Selections</div>
-
+    <div class="section-title">Optional Sink Selections</div>
     <div class="sink-grid">
-      <label class="sink-item" data-price="180" for="qty-kstd">
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="180" />
         <span class="sink-name">Standard Kitchen Sink Undermount</span>
-        <input id="qty-kstd" type="number" class="sink-qty" min="0" max="20" step="1" value="0" inputmode="numeric">
+        <input type="number" class="sink-qty" min="1" step="1" value="1" disabled hidden />
       </label>
 
-      <label class="sink-item" data-price="455" for="qty-khand">
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="455" />
         <span class="sink-name">HandMade Kitchen Sink Undermount</span>
-        <input id="qty-khand" type="number" class="sink-qty" min="0" max="20" step="1" value="0" inputmode="numeric">
+        <input type="number" class="sink-qty" min="1" step="1" value="1" disabled hidden />
       </label>
 
-      <label class="sink-item" data-price="560" for="qty-kws">
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="560" />
         <span class="sink-name">WorkStation Kitchen Sink Undermount</span>
-        <input id="qty-kws" type="number" class="sink-qty" min="0" max="20" step="1" value="0" inputmode="numeric">
+        <input type="number" class="sink-qty" min="1" step="1" value="1" disabled hidden />
       </label>
 
-      <label class="sink-item" data-price="200" for="qty-kapron">
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="200" />
         <span class="sink-name">Apron Kitchen Sink Undermount</span>
-        <input id="qty-kapron" type="number" class="sink-qty" min="0" max="20" step="1" value="0" inputmode="numeric">
+        <input type="number" class="sink-qty" min="1" step="1" value="1" disabled hidden />
       </label>
 
-      <label class="sink-item" data-price="80" for="qty-bstd">
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="80" />
         <span class="sink-name">Standard Bathroom Sink Undermount</span>
-        <input id="qty-bstd" type="number" class="sink-qty" min="0" max="20" step="1" value="0" inputmode="numeric">
+        <input type="number" class="sink-qty" min="1" step="1" value="1" disabled hidden />
       </label>
 
-      <label class="sink-item" data-price="40" for="qty-btop">
-        <span class="sink-name">Topmount Bathroom Sink C/S</span>
-        <input id="qty-btop" type="number" class="sink-qty" min="0" max="20" step="1" value="0" inputmode="numeric">
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="40" />
+        <span class="sink-name">Topmount Bathroom Sink</span>
+        <input type="number" class="sink-qty" min="1" step="1" value="1" disabled hidden />
       </label>
 
-      <label class="sink-item" data-price="30" for="qty-bves">
-        <span class="sink-name">Vessel Bathroom Sink C/S</span>
-        <input id="qty-bves" type="number" class="sink-qty" min="0" max="20" step="1" value="0" inputmode="numeric">
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="30" />
+        <span class="sink-name">Vessel Bathroom Sink</span>
+        <input type="number" class="sink-qty" min="1" step="1" value="1" disabled hidden />
       </label>
     </div>
   </div>
@@ -97,21 +103,12 @@
         <td id="totalExtras"></td>
         <td id="totalCost"></td>
       </tr>
-      <tfoot>
-  <tr>
-    <td colspan="8" style="text-align:right;"><strong>Totals:</strong></td>
-    <td id="totalSqft"></td>
-    <td id="totalLabor"></td>
-    <td id="totalExtras"></td>
-    <td id="totalCost"></td>
-  </tr>
-
-  <!-- NEW: shows the sink add‑ons dollar amount -->
-  <tr>
-    <td colspan="11" style="text-align:right;"><strong>Sink Add‑ons:</strong></td>
-    <td id="totalSinkAddons"></td>
-  </tr>
-</tfoot>
+      <!-- NEW: shows the sink add‑ons dollar amount -->
+      <tr>
+        <td colspan="11" style="text-align:right;"><strong>Sink Add‑ons:</strong></td>
+        <td id="totalSinkAddons"></td>
+      </tr>
+    </tfoot>
   </table>
 
   <h2>Suggested Prefab Pieces (by Material/Type, leftovers reused)</h2>
