--- a/index.html
+++ b/index.html
@@ -119,6 +119,21 @@
   <h2>Plywood Sheets (48×96 @ $70, minimized waste)</h2>
   <div id="plySummary"></div>
   <table id="plyTable">
+    <!-- Bottom Totals Block -->
+<div id="totalsBlock" style="margin-top:20px; max-width:400px; float:right; font-size:14px;">
+  <div class="totals-row"><span>Kitchen Sink installation cost:</span><span id="kitchenSinkInstall">$0.00</span></div>
+  <div class="totals-row"><span>Bathroom Sink installation cost:</span><span id="bathSinkInstall">$0.00</span></div>
+  <div class="totals-row"><span>Installation cost:</span><span id="installationCost">$0.00</span></div>
+  <div class="totals-row"><span>Fabrication:</span><span id="fabricationCost">$0.00</span></div>
+  <div class="totals-row"><span>Plywood:</span><span id="plywoodCost">$0.00</span></div>
+
+  <!-- NEW: sinks subtotal line -->
+  <div class="totals-row"><span>Sinks (selected):</span><span id="sinksAmount">$0.00</span></div>
+
+  <hr/>
+  <div class="totals-row" style="font-weight:600;"><span>Total:</span><span id="grandTotal">$0.00</span></div>
+</div>
+
     <thead>
       <tr>
         <th>Sheet #</th>
