--- a/index.html
+++ b/index.html
@@ -143,11 +143,21 @@
     <div class="totals-row"><span>Fabrication:</span><span id="fabricationCost">$0.00</span></div>
     <div class="totals-row"><span>Plywood:</span><span id="plywoodCost">$0.00</span></div>
 
+    <!-- NEW FEES -->
+    <div class="totals-row">
+      <span>Sealer application fee:</span>
+      <span><input id="sealerFeeInput" type="number" min="0" step="1" value="0"></span>
+    </div>
+
+    <div class="totals-row">
+      <span>Quartz Glue:</span>
+      <span><input id="quartzGlueInput" type="number" min="0" step="1" value="0"></span>
+    </div>
+    <!-- END NEW FEES -->
+
     <div class="totals-row" id="oversizeFeeRow">
       <span>Oversize piece fee:</span>
-      <span>
-        <input id="oversizeFeeInput" type="number" min="0" step="1" value="0">
-      </span>
+      <span><input id="oversizeFeeInput" type="number" min="0" step="1" value="0"></span>
     </div>
 
     <hr/>
